add third paragraph to the file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Week 2</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <h1>Web dev 2</h1>
+    </header>
+    <main>
+        <h2 class="headTwo">Week 1 Content</h2>
+        <p>I am learning about git and github today</p>
+        <p>This is another paragraph</p>
+        <p>this is a 3rd paragraph</p>
+    </main>
+    <footer>
+        <p>&copy;Copyright IMD, 2025</p>
+    </footer>
 </body>
 </html>
